# Visual-Odometry

./: .gitignore  CMakeLists.txt  README.md
exe/: CMakeLists.txt  cam_test.cpp  complete_test.cpp  epipolar_test.cpp  evaluation_test.cpp  kdtree_test.cpp  picp_test.cpp  read_test.cpp  vis_odom_test.cpp
include/: camera.h  correspondence_finder.h  defs.h  epipolar.h  kdtree.h  kdtree_utils.h  points_utils.h  projective_icp.h  read_data.h
src/: camera.cpp  correspondence_finder.cpp  epipolar.cpp  points_utils.cpp  projective_icp.cpp  read_data.cpp
